# delta-enabled-crdts

./: CMakeLists.txt  ChangeLog.md  Makefile  README.md  delta-crdts.cc  delta-tests.cc  id-gen  id-gen-not-compact.c  id-gen.c  old-id-gen.c  old2-id-gen.c
include/crdts/: delta-crdts.h
src/: delta-crdts.cc
test/: CMakeLists.txt  delta-tests.cc
